--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ lalrpop = "0.19.6"
 lalrpop-util = "0.19.6"
 mset = "0.0.4"
 rustc-hash = "1.1.0"
+smallvec = "1.6.1"
 
 [profile.release]
 lto = true
